BRAHMS-10 adds brahms changes to forked reference theme

--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/constructor.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/constructor.less
@@ -9,6 +9,10 @@
 
 /* CORE VARIABLES AND MIXINS */
 @import "misc/variables.less";
+
+/* THEME CHANGES */
+@import "themeChanges/reference/misc/variables.less";
+
 @import "misc/fonts.less";
 @import "misc/mixins.less";
 @import "misc/print.less";
@@ -160,7 +164,7 @@
 @import "cms/templates/18_templatePrivacy.less";
 @import "cms/templates/19_templateFeedback.less";
 @import "cms/templates/20_templateGlossary.less";
-@import "cms/templates/21_templateFaq.less"; 
+@import "cms/templates/21_templateFaq.less";
 @import "cms/templates/22_templateFaqSingle.less";
 @import "cms/templates/23_templateSearch.less";
 @import "cms/templates/24_templateTags.less";
@@ -177,3 +181,6 @@
 // SINGLE CMS CONTENT COMPONENT FRONTEND LAYOUT FILE
 @import "cms/contentComponents/highlightedObject.less";
 @import "cms/contentComponents/searchFacets.less";
+
+/* THEME CHANGES */
+@import "themeChanges/constructor.less";
