BRAHMS-10 adjusts own changes to new template mechanic

--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/components/componentTemplate.xhtml
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/components/componentTemplate.xhtml
@@ -3,7 +3,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:composite="http://xmlns.jcp.org/jsf/composite"
-      xmlns:viewerComponent="http://xmlns.jcp.org/jsf/composite/components" xmlns:widgetComponent="http://xmlns.jcp.org/jsf/composite/components/widgets"
+      xmlns:viewerComponent="http://xmlns.jcp.org/jsf/composite/components"
+      xmlns:widgetComponent="http://xmlns.jcp.org/jsf/composite/components/widgets"
       xmlns:templateComponent="http://xmlns.jcp.org/jsf/composite/themes/reference/components">
 
     <!-- interface options -->
@@ -11,6 +12,6 @@
 
     <!-- component content -->
     <composite:implementation>
-        
+
     </composite:implementation>
 </ui:composition>
