--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/constructor.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/constructor.less
@@ -7,6 +7,8 @@
  * Goobi viewer
  **************************************************************/
 
+@import url('https://webfonts.gbv.de/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 /* CORE VARIABLES AND MIXINS */
 @import "misc/variables.less";
 
