--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/themeChanges/reference/layout/layout.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/themeChanges/reference/layout/layout.less
@@ -1,11 +1,16 @@
 .page-header {
+  background: @b-paper;
     &__logo {
         a {
             img {
-                max-width: 226px;
+                max-width: 225px;
             }
         }
     }
+}
+
+.page-content {
+  background: @b-paper;
 }
 
 .page-footer {
