--- a/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/reference/misc/variables.less
+++ b/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/reference/misc/variables.less
@@ -8,6 +8,7 @@
 @b-paper:       #FCFCFC;
 @b-silver:      #F2F4EF;
 @b-iron:        #EDEDED;
+@b-divider:     #d0dadb;
 
 @b-green-trans: #89c90f5a;
 @b-border:      #829EA2;
