--- a/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/includes/brahms-layout.xhtml
+++ b/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/includes/brahms-layout.xhtml
@@ -11,199 +11,223 @@
   xmlns:widgetComponent="http://xmlns.jcp.org/jsf/composite/components/widgets"
   xmlns:templateComponent="http://xmlns.jcp.org/jsf/composite/themes/brahms/components">
 
-  <div id="bodyWrapper">
+  <div id="bodyWrapper" class="#{cmsPage.wrapperElementClass}">
 
+    <!-- ADMIN TOPBAR FRONTEND -->
+    <viewerComponent:frontEndAdminTopBar />
 
-  <!-- ADMIN TOPBAR FRONTEND -->
-  <viewerComponent:frontEndAdminTopBar />
-
-  <!-- ONLY FOR KEYBOARD - SKIP TO MAIN CONTENT LINK -->
-  <div class="skip-menu">
-    <a href="#main" class="skip-menu__link">
-    #{msg.accessibility__skip_menu__jump_to_main}
-    </a>
-  </div>
-
-
-  <div class="page-header__spacer #{userBean.admin ? '-adminActive':''}" aria-hidden="true">spacer</div>
-
-    <!-- PAGE HEADER -->
-  <header id="pageHeader">
-    <div class="page-header #{userBean.admin ? '-adminActive':''}">
-      <div class="container page-header__wrapper">
-        <div class="page-header__inner">
-          <!-- PAGE HEADER BOTTOM LOGO -->
-          <div class="page-header__logo">
-            <a href="#{request.contextPath}/"> <img
-              src="#{request.contextPath}/resources/themes/brahms/images/brahms/logo/brahms-institut.png"
-              alt="#{adminThemesBean.getThemeLabel(configurationBean.name)} Logo" />
-            </a>
-          </div>
-
-          <ui:fragment rendered="#{cmsPage.wrapperElementClass != 'home'}">
-          <!-- PAGE HEADER TOP ACTIONS -->
-          <div class="page-header__actions">
-            <!-- BOOKMARKS -->
-            <div class="page-header__actions-bookmark">
-              <viewerComponent:bookmarkListNavigation />
-            </div>
-            <!-- CHANGE LOCALE -->
-            <ui:fragment
-              rendered="#{fn:length(navigationHelper.supportedLanguages) > 1}">
-              <div id="changeLocalWrapper"
-                class="page-header__actions-language">
-                <button type="button"
-                  class="btn btn--clean page-header__actions-language-button"
-                  data-toggle="local"
-                  aria-label="#{msg.aria_label__switch_language}">
-                  <!--  CHANGE THIS MESSAGE KEY FOR LONG/SHORT LANGUAGE STRINGS -->
-                  <!-- #{msg['changeLocal_long_' += navigationHelper.localeString]}</button> -->
-
-                  <!-- GENERIC ICON AND MESSAGE -->
-                  <span class="fa fa-globe"></span>#{msg.language}
-                </button>
-                <!--  STYLE CSS FOR LANGUAGE TOGGLE FUNCTIONALITY -->
-                <viewerComponent:changeLocal toggleLanguage="false"
-                  longLanguageStrings="true" />
-              </div>
-            </ui:fragment>
-            <!-- LOGIN NAVIGATION -->
-            <div class="page-header__actions-login">
-              <viewerComponent:loginNavigation />
-            </div>
-            <button data-open="search"
-              class="btn btn--icon page-header__actions-search-button"
-              aria-label="#{msg.search}">
-              <i class="fa fa-search"></i>
-              <div class="page-header__actions-search-close">
-                <span></span>
-              </div>
-            </button>
-
-            <div class="page-header__actions-color-switch">
-              <viewerComponent:colorThemeToggle/>
-            </div>
-
-            <ui:fragment rendered="#{adminClientsBean.clientLoggedIn}">
-              <div class="page-header__client-status">
-                <viewerComponent:clientApplicationStatus/>
-              </div>
-            </ui:fragment>
-
-            <button type="button" data-open="menu" aria-label="#{msg.aria_label__open_navigation}"
-              class="page-header__mobile-burger-menu-alternative">
-              <span></span>
-            </button>
-
-          </div>
-          </ui:fragment>
-        </div>
-      </div>
-
-      <!-- MOBILE MENU OVERLAY/BACKGROUND -->
-      <div class="page-header__navigation-mobile-background"></div>
-
-      <!-- SEARCH BOX -->
-      <div data-target="search-box" class="page-header__search-box">
-        <div class="container">
-          <widgetComponent:widget_searchField onlySearchIcon="false"/>
-        </div>
-      </div>
-
-      <!-- DESKTOP NAVIGATION -->
-      <div id="pageNavigation"
-        class="page-navigation #{userBean.admin ? '-adminActive':''}">
-        <div class="container page-navigation__wrapper">
-          <viewerComponent:navigation id="page-header__nav-menu-desktop"
-            megaMenu="false" />
-        </div>
-      </div>
-
+    <!-- ONLY FOR KEYBOARD - SKIP TO MAIN CONTENT LINK -->
+    <div class="skip-menu">
+      <a href="#main" class="skip-menu__link">
+      #{msg.accessibility__skip_menu__jump_to_main}
+      </a>
     </div>
-    <!-- End class="page-header" -->
 
-    <!-- HERO SLIDER -->
-    <ui:fragment rendered="#{cmsPage.hasTopbarComponents()}">
-      <div class="page-header__slider">
-        <ui:insert name="topbar" />
+    <div class="page-header__spacer #{userBean.admin ? '-adminActive':''}" aria-hidden="true">
+      spacer
+    </div>
+
+    <ui:fragment rendered="#{cmsPage.wrapperElementClass == 'start'}">
+      <div class="brahms-intro">
+        <img
+          class="brahms-intro__brahms"
+          src="#{request.contextPath}/resources/themes/brahms/images/brahms/figure/brahms-intro-1600.png"
+          alt="" />
+          <div class="brahms-intro__container">
+            <div class="brahms-intro__logo">
+              <a href="#{msg.url__brahms_institut}"> <img
+                src="#{request.contextPath}/resources/themes/brahms/images/brahms/logo/brahms-institut.png"
+                alt="Logo" />
+              </a>
+            </div>
+            <div class="brahms-intro__slogan">
+              <img
+                src="#{request.contextPath}/resources/themes/brahms/images/brahms/figure/wir-lieben-brahms.svg"
+                alt="Slogan" />
+            </div>
+          </div>
+      </div>
+      <div class="startpage-headline">
+        <div class="startpage-headline__text">
+          #{msg.brahms_layout__startpage__headline}
+        </div>
       </div>
     </ui:fragment>
 
-  </header>
+    <ui:fragment rendered="#{cmsPage.wrapperElementClass != 'start'}">
+    <!-- PAGE HEADER -->
+    <header id="pageHeader">
+      <div class="page-header #{userBean.admin ? '-adminActive':''}">
+        <div class="container page-header__wrapper">
+          <div class="page-header__inner">
+            <!-- PAGE HEADER BOTTOM LOGO -->
+            <div class="page-header__logo">
+              <a href="#{request.contextPath}/"> <img
+                src="#{request.contextPath}/resources/themes/brahms/images/brahms/logo/brahms-institut.png"
+                alt="#{adminThemesBean.getThemeLabel(configurationBean.name)} Logo" />
+              </a>
+            </div>
 
+            <!-- PAGE HEADER TOP ACTIONS -->
+            <div class="page-header__actions">
+              <!-- BOOKMARKS -->
+              <div class="page-header__actions-bookmark">
+                <viewerComponent:bookmarkListNavigation />
+              </div>
+              <!-- CHANGE LOCALE -->
+              <ui:fragment
+                rendered="#{fn:length(navigationHelper.supportedLanguages) > 1}">
+                <div id="changeLocalWrapper"
+                  class="page-header__actions-language">
+                  <button type="button"
+                    class="btn btn--clean page-header__actions-language-button"
+                    data-toggle="local"
+                    aria-label="#{msg.aria_label__switch_language}">
+                    <!--  CHANGE THIS MESSAGE KEY FOR LONG/SHORT LANGUAGE STRINGS -->
+                    <!-- #{msg['changeLocal_long_' += navigationHelper.localeString]}</button> -->
 
-  <!-- MOBILE OVERLAY -->
-  <div class="mobile-overlay"></div>
+                    <!-- GENERIC ICON AND MESSAGE -->
+                    <span class="fa fa-globe"></span>#{msg.language}
+                  </button>
+                  <!--  STYLE CSS FOR LANGUAGE TOGGLE FUNCTIONALITY -->
+                  <viewerComponent:changeLocal toggleLanguage="false"
+                    longLanguageStrings="true" />
+                </div>
+              </ui:fragment>
+              <!-- LOGIN NAVIGATION -->
+              <div class="page-header__actions-login">
+                <viewerComponent:loginNavigation />
+              </div>
+              <button data-open="search"
+                class="btn btn--icon page-header__actions-search-button"
+                aria-label="#{msg.search}">
+                <i class="fa fa-search"></i>
+                <div class="page-header__actions-search-close">
+                  <span></span>
+                </div>
+              </button>
 
-  <!-- SEARCH OVERLAY -->
-  <div data-target="search-overlay" class="page-header__search-overlay"></div>
+              <div class="page-header__actions-color-switch">
+                <viewerComponent:colorThemeToggle/>
+              </div>
 
-  <!-- MAIN -->
-  <div id="pageContent" class="page-content">
+              <ui:fragment rendered="#{adminClientsBean.clientLoggedIn}">
+                <div class="page-header__client-status">
+                  <viewerComponent:clientApplicationStatus/>
+                </div>
+              </ui:fragment>
 
+              <button type="button" data-open="menu" aria-label="#{msg.aria_label__open_navigation}"
+                class="page-header__mobile-burger-menu-alternative">
+                <span></span>
+              </button>
 
-    <div class="container">
-      <div class="page-content__wrapper" data-target="content-wrapper">
-        <!-- CONTENT -->
-        <main id="main" class="page-content__main" role="main">
+            </div>
 
-          <!-- OPEN MOBILE NAVIGATION -->
-          <div class="page-header__mobile-sidebar-trigger">
-            <button type="button"
-              class="btn btn--icon page-header__mobile-sidebar-trigger-arrow -arrow"
-              data-open="sidebar" aria-label="#{msg.aria_label__open_sidebar}">
-              <span class="page-header__mobile-sidebar-trigger-arrow-inner">
-                <span class="bar"></span> <span class="bar"></span>
-              </span>
-            </button>
           </div>
+        </div>
 
-          <!-- BREADCRUMBS -->
-          <ui:fragment rendered="#{cmsPage.wrapperElementClass != 'home'}">
-            <viewerComponent:breadcrumbs showIcon="false" showStartText="true" />
-          </ui:fragment>
+        <!-- MOBILE MENU OVERLAY/BACKGROUND -->
+        <div class="page-header__navigation-mobile-background"></div>
 
-          <ui:fragment rendered="#{cmsPage.wrapperElementClass == 'home'}">
-            Introbild
-          </ui:fragment>
+        <!-- SEARCH BOX -->
+        <div data-target="search-box" class="page-header__search-box">
+          <div class="container">
+            <widgetComponent:widget_searchField onlySearchIcon="false"/>
+          </div>
+        </div>
 
-          <ui:insert name="content" />
-
-        </main>
-
-        <!-- SIDEBAR -->
-        <aside id="sidebar" class="page-content__sidebar -refreshHCsticky" data-target="sticky-sidebar">
-          <!-- ALTERNATIVE SIDEBAR MENU COMPONENT -->
-          <!-- <viewerComponent:sidebarMenu /> -->
-
-          <!-- SIDEBAR WIDGETS -->
-          <ui:insert name="sidebar" />
-
-        </aside>
+        <!-- DESKTOP NAVIGATION -->
+        <div id="pageNavigation"
+          class="page-navigation #{userBean.admin ? '-adminActive':''}">
+          <div class="container page-navigation__wrapper">
+            <viewerComponent:navigation id="page-header__nav-menu-desktop"
+              megaMenu="false" />
+          </div>
+        </div>
 
       </div>
+      <!-- End class="page-header" -->
+
+      <!-- HERO SLIDER -->
+      <ui:fragment rendered="#{cmsPage.hasTopbarComponents()}">
+        <div class="page-header__slider">
+          <ui:insert name="topbar" />
+        </div>
+      </ui:fragment>
+
+    </header>
+    </ui:fragment>
+
+
+    <!-- MOBILE OVERLAY -->
+    <div class="mobile-overlay"></div>
+
+    <!-- SEARCH OVERLAY -->
+    <div data-target="search-overlay" class="page-header__search-overlay"></div>
+
+    <!-- MAIN -->
+    <div id="pageContent" class="page-content">
+
+
+      <div class="container">
+        <div class="page-content__wrapper" data-target="content-wrapper">
+          <!-- CONTENT -->
+          <main id="main" class="page-content__main" role="main">
+
+            <!-- OPEN MOBILE NAVIGATION -->
+            <div class="page-header__mobile-sidebar-trigger">
+              <button type="button"
+                class="btn btn--icon page-header__mobile-sidebar-trigger-arrow -arrow"
+                data-open="sidebar" aria-label="#{msg.aria_label__open_sidebar}">
+                <span class="page-header__mobile-sidebar-trigger-arrow-inner">
+                  <span class="bar"></span> <span class="bar"></span>
+                </span>
+              </button>
+            </div>
+
+            <!-- BREADCRUMBS -->
+            <ui:fragment rendered="#{cmsPage.wrapperElementClass != 'start'}">
+              <viewerComponent:breadcrumbs showIcon="false" showStartText="true" />
+            </ui:fragment>
+
+            <ui:insert name="content" />
+
+          </main>
+
+          <!-- SIDEBAR -->
+          <aside id="sidebar" class="page-content__sidebar -refreshHCsticky" data-target="sticky-sidebar">
+            <!-- ALTERNATIVE SIDEBAR MENU COMPONENT -->
+            <!-- <viewerComponent:sidebarMenu /> -->
+
+            <!-- SIDEBAR WIDGETS -->
+            <ui:insert name="sidebar" />
+
+          </aside>
+
+        </div>
+      </div>
     </div>
+
+    <footer id="pageFooter" class="page-footer">
+      <div class="page-footer__wrapper page-footer__wrapper--links">
+        <div class="page-footer__links">
+          <a href="#">Impressum</a>
+          <a href="#">Kontakt</a>
+          <a href="#">Service</a>
+          <a href="#">Datenschutz</a>
+        </div>
+      </div>
+
+      <div class="page-footer__wrapper page-footer__wrapper--copyright">
+        <div class="page-footer__copyright">
+          <span>© 2022 Brahms-Institut an der Musikhochschule Lübeck</span>
+        </div>
+      </div>
+
+    </footer>
+
   </div>
-
-  <footer id="pageFooter" class="page-footer">
-    <div class="page-footer__wrapper page-footer__wrapper--links">
-      <div class="page-footer__links">
-        <a href="#">Impressum</a>
-        <a href="#">Kontakt</a>
-        <a href="#">Service</a>
-        <a href="#">Datenschutz</a>
-      </div>
-    </div>
-
-    <div class="page-footer__wrapper page-footer__wrapper--copyright">
-      <div class="page-footer__copyright">
-        <span>© 2022 Brahms-Institut an der Musikhochschule Lübeck</span>
-      </div>
-    </div>
-
-  </footer>
-
-</div>
 
   <!-- MOBILE ONLY NAVIGATION -->
   <nav class="page-navigation__mobile #{userBean.admin ? '-adminActive':''}">
