BRAHMS-10 adjusts footerlinks

--- a/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/includes/brahms-layout.xhtml
+++ b/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/includes/brahms-layout.xhtml
@@ -212,12 +212,12 @@
     <footer id="pageFooter" class="page-footer">
       <div class="page-footer__wrapper page-footer__wrapper--links">
         <div class="page-footer__links">
-          <a href="#">Impressum</a>
+          <a href="#{request.contextPath}/imprint/">#{msg.imprint}</a>
           <c:if test="#{not empty adminThemesBean.currentTheme.getFooterLink('contact').linkUrl}">
             <a href="#{adminThemesBean.getFooterUrl('contact', 'default_contact_link')}">#{msg.contact}</a>
           </c:if>
-          <a href="#">Service</a>
-          <a href="#">Datenschutz</a>
+          <a href="#{request.contextPath}/privacy/">#{msg.privacy}</a>
+          <a href="#{request.contextPath}/accessibility/">#{msg.accessibility}</a>
         </div>
       </div>
 
