--- a/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/brahms/general.less
+++ b/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/brahms/general.less
@@ -71,28 +71,28 @@ body {
     padding: 97px 77px 60px 78px;
     border: 1px solid @b-border;
     margin-bottom: 44px;
-    img {}
-    div {
-      font-size: 18px;
-      line-height: 32px;
-      letter-spacing: 2.16px;
-      margin-bottom: 87px;
-      &::before {
-        content: " ";
-        width: 100px;
-        height: 1px;
-        display: inline-block;
-        background-color: @b-divider;
-        margin-top: 30px;
-        margin-bottom: 70px;
-        text-align: center;
-      }
-    }
-    a {}
-    &--portal {}
-    &--institute {}
     &--360 {
       flex: 0 0 100%;
+    }
+  }
+  &__figure {
+    width: 100%;
+    margin-bottom: 83px;
+  }
+  &__content {
+    font-size: 18px;
+    line-height: 32px;
+    letter-spacing: 2.16px;
+    margin-bottom: 87px;
+    &::before {
+      content: " ";
+      width: 100px;
+      height: 1px;
+      display: inline-block;
+      background-color: @b-divider;
+      margin-top: 30px;
+      margin-bottom: 70px;
+      text-align: center;
     }
   }
 }
