BRAHMS-10 fixes streched links on landing page

--- a/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/brahms/general.less
+++ b/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/brahms/general.less
@@ -71,6 +71,7 @@ body {
     padding: 97px 77px 60px 78px;
     border: 1px solid @b-border;
     margin-bottom: 44px;
+    position: relative; // need for end streched link
     &--360 {
       flex: 0 0 100%;
     }
