BRAHMS-10 moves less rules to specific files

--- a/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/constructor.less
+++ b/goobi-viewer-theme-brahms/WebContent/resources/themes/brahms/css/less/themeChanges/constructor.less
@@ -2,4 +2,6 @@
 @import "reference/layout/layout.less";
 
 /* PROJECT SETTINGS */
+@import "brahms/page_home.less";
+@import "brahms/page_start.less";
 @import "brahms/general.less";
